Added blob storage, and restructured the models directory

--- a/.env
+++ b/.env
@@ -37,3 +37,11 @@ COSMOS_HOST =
 COSMOS_KEY  = 
 COSMOS_DATABASE_ID  = 436p4
 COSMOS_CONTAINER_ID = people
+
+
+
+### Blob Storage ###
+#
+BLOB_ACCOUNT_NAME = 
+BLOB_KEY          = 
+BLOB_CONTAINER_ID = people
