Finished rearranging models, and added debugging messages on startup

--- a/.env
+++ b/.env
@@ -21,26 +21,35 @@
 
 ### Cosmos DB ###
 #
-# HOST = The URI of the database.
-# KEY  = The key to the database.
+# ACCOUNT_NAME = The name of the Cosmos DB account.
+# KEY          = The key to the Cosmos DB account.
 # DATABASE_ID  = The name of the database. This will be created if it does not exist.
 # CONTAINER_ID = The name of the container. This will be created if it does not exist.
 #
-# Both the HOST and KEY can be found on the Azure Portal.
+# Both the ACCOUNT_NAME and KEY can be found on the Azure Portal.
 #   1. Go to the Azure Cosmos DB service.
 #   2. Select (or create) your Azure Cosmos DB account.
 #   3. On the left-hand side, under "Settings", select "Keys".
-# HOST is the "URI" on that page.
 # KEY is the "PRIMARY KEY" (or "SECONDARY KEY") on that page.
 #
-COSMOS_HOST = 
-COSMOS_KEY  = 
-COSMOS_DATABASE_ID  = 436p4
+COSMOS_ACCOUNT_NAME = 
+COSMOS_KEY          = 
+COSMOS_DATABASE_ID  = 
 COSMOS_CONTAINER_ID = people
 
 
 
 ### Blob Storage ###
+#
+# ACCOUNT_NAME = The name of the Storage account.
+# KEY          = The key to the Storage account.
+# CONTAINER_ID = The name of the container. This will be created if it does not exist.
+#
+# KEY can be found on the Azure Portal.
+#   1. Go to the Storage accounts.
+#   2. Select your Storage account.
+#   3. On the left-hand side, under "Security + networking", select "Access keys".
+# KEY is the "Key" (either under "key1" or "key2") on that page.
 #
 BLOB_ACCOUNT_NAME = 
 BLOB_KEY          = 
